# ApplyBoard

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json  server.js
backend/src/: server.js
backend/src/db/: init.js
backend/src/plugins/: authenticate.js
backend/src/routes/: auth.js  cvDocument.js  cvModules.js  offers.js
backend/src/schemas/: cvDocumentSchema.js
cv-document-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
cv-document-mcp/src/cv_document_mcp/: __init__.py  db.py  operations.py  schemas.py  server.py
cv-document-mcp/tests/: test_operations.py
database/: README.md
database/init/: 001-dev-seed.sql
docs/cv-document/: README.md
docs/cv-modules/: README.md
docs/cv-modules.legacy/: README.md
docs/cv-modules.legacy/kinds/: hackathons.md  title.md
docs/cv-modules/kinds/: custom.md  education.md  experience.md  headline.md  interests.md  (+2 more)
extension/chrome/: background.js  content.js  manifest.json  popup.html  popup.js
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js
langgraph/: .env.example  .gitignore  README.md  pyproject.toml
langgraph/scripts/: analyze_offer_from_db.py
langgraph/src/app/: __init__.py  app.py  graph.py  llm.py  prompting.py  schemas.py
langgraph/src/app/nodes/: __init__.py  analyze_offer.py  select_title.py
langgraph/src/app/prompts/: analyze_offer.md  select_title.md
langgraph/tests/: test_analyze_offer.py  test_llm_provider.py  test_select_title.py
nginx/: nginx.conf
(+32 files in other folders)
