[project]
name = "applyboard-ai-service"
version = "0.1.0"
description = "LangGraph service for ApplyBoard CV generation workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=1.2.0",
    "openai>=2.0.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

